--- a/templates/pages/shows.html
+++ b/templates/pages/shows.html
@@ -5,13 +5,16 @@
     {%for show in shows %}
     <div class="col-sm-4">
         <div class="tile tile-show">
-            <img src="{{ show.artist_image_link }}" alt="Artist Image" />
-            <h4>{{ show.start_time|datetime('full') }}</h4>
-            <h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
+            <img src="{{ show[3] }}" alt="Artist Image" />
+            <h4>{{ show[0].strftime('%A %B %d, %Y at %I:%M %p') }}</h4>
+            <h5><a href="/artists/{{ show[1] }}">{{ show[2] }}</a></h5>
             <p>playing at</p>
-            <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+            <h5><a href="/venues/{{ show[4] }}">{{ show[5] }}</a></h5>
         </div>
     </div>
     {% endfor %}
 </div>
 {% endblock %}
+<!--
+    show[0].strftime('%a %B %Y-%m-%d')
+-->
